--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Audit dependencies for vulnerabilities
+        run: npm audit --audit-level=moderate
+        continue-on-error: false
+      
       - name: Run linter
         run: npm run lint
         continue-on-error: false
